# bff_alg

./: .gitignore  CMakeLists.txt  README.md
dataset/: 3elt.mtx  BA-1_10_60-L5.mtx  DD244.mtx  DD68.mtx  ENZYMES_g297.mtx  Erdos972.mtx  Erdos981.mtx  Erdos982.mtx  Erdos991.mtx  G48.mtx  G49.mtx  G50.mtx  NotreDame_yeast.mtx  TerroristRel.mtx  adjnoun.mtx  as-735.mtx  ba-1k-2k.mtx  bal_bin_tree_9.mtx  bal_ter_tree_6.mtx  bio-celegans-dir.mtx  bio-diseasome.mtx  bio-grid-mouse.mtx  bio-yeast.mtx  c-fat200-1.mtx  c-fat200-2.mtx  c-fat200-5.mtx  c-fat500-1.mtx  c-fat500-10.mtx  c-fat500-2.mtx  c-fat500-5.mtx  ca-CSphd.mtx  ca-GrQc.mtx  ca-netscience.mtx  cac1000.mtx  cac200.mtx  cac25.mtx  cac600.mtx  chameleon.mtx  chesapeake.mtx  cite-DBLP.mtx  (+43 more)
src/: main.cpp
src/algorithm/: AlgUtils.cpp  AlgUtils.h  BFFSolver.cpp  BFFSolver.h  BonSolver.cpp  BonSolver.h
src/combinations/: combinations.hpp  combinations_init.hpp
src/combinations/detail/: combination.hpp
src/utils/: FileUtil.cpp  FileUtil.h
